创建添加供应商管理组件

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -17,7 +17,7 @@
 .el-switch .el-switch__label.is-active {
     display: block;
 }
-.el-switch.el-switch .el-switch__core,
+.el-switch .el-switch__core,
 .el-switch .el-switch__label {
     width: 60px !important;
 }
@@ -28,4 +28,7 @@
 
 .el-table {
     margin-top: 15px;
-  }
+}
+.el-form{
+    margin-top: 15px;
+}
